This commit finishes second task

--- a/index.html
+++ b/index.html
@@ -63,6 +63,18 @@
           <button onclick="addFractions()">
             Add Fractions
           </button>
+          <button onclick="substractFractions()">
+            Substract Fractions
+          </button>
+          <button onclick="multiplyFractions()">
+            Multiply Fractions
+          </button>
+          <button onclick="divideFractions()">
+            Divide Fractions
+          </button>
+          <button onclick="cancelFraction()">
+            Cancel Fraction
+          </button>
         </div>
       </fieldset>
       <fieldset class="taskform__taskunit" id="task3">
