This commit adds third task (not finished)

--- a/index.html
+++ b/index.html
@@ -96,6 +96,20 @@
             </li>
           </ul>
         </p>
+        <div class="buttonsblock">
+          <button onclick="initTime()">
+            Initialize Time
+          </button>
+          <button onclick="adjustSeconds()">
+            Adjust Seconds
+          </button>
+          <button onclick="adjustMinutes()">
+            Adjust Minutes
+          </button>
+          <button onclick="adjustHours()">
+            Adjust Hours
+          </button>
+        </div>
       </fieldset>
     </form>
   </body>
